--- a/src/mysql.ipynb
+++ b/src/mysql.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
     "                                 host='database-1.cjocas8y2rhl.us-east-1.rds.amazonaws.com',\n",
     "                                 port=3306,\n",
     "                                 password='Uukkmskp1!#',\n",
-    "                                 database='juan'\n",
+    "                                 database='grupo_05'\n",
     "                                 )\n",
     "    print('Conexão feita com sucesso!')\n",
     "except Exception as erro:\n",
@@ -49,208 +49,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id_usuario</th>\n",
-       "      <th>cpf</th>\n",
-       "      <th>nome_usuario</th>\n",
-       "      <th>telefone_usuario</th>\n",
-       "      <th>dt_nascimento</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>123.456.789-01</td>\n",
-       "      <td>João Silva</td>\n",
-       "      <td>(123) 456-7890</td>\n",
-       "      <td>1990-01-15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>234.567.890-12</td>\n",
-       "      <td>Maria Santos</td>\n",
-       "      <td>(234) 567-8901</td>\n",
-       "      <td>1985-07-20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>345.678.901-23</td>\n",
-       "      <td>Pedro Oliveira</td>\n",
-       "      <td>(345) 678-9012</td>\n",
-       "      <td>2000-03-10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>456.789.012-34</td>\n",
-       "      <td>Ana Pereira</td>\n",
-       "      <td>(456) 789-0123</td>\n",
-       "      <td>1998-09-05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>567.890.123-45</td>\n",
-       "      <td>Carlos Rodrigues</td>\n",
-       "      <td>(567) 890-1234</td>\n",
-       "      <td>1982-12-30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>6</td>\n",
-       "      <td>678.901.234-56</td>\n",
-       "      <td>Mariana Costa</td>\n",
-       "      <td>(678) 901-2345</td>\n",
-       "      <td>1995-06-25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>7</td>\n",
-       "      <td>789.012.345-67</td>\n",
-       "      <td>Lucas Almeida</td>\n",
-       "      <td>(789) 012-3456</td>\n",
-       "      <td>1992-11-18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>8</td>\n",
-       "      <td>890.123.456-78</td>\n",
-       "      <td>Isabela Ferreira</td>\n",
-       "      <td>(890) 123-4567</td>\n",
-       "      <td>2001-08-12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>9</td>\n",
-       "      <td>901.234.567-89</td>\n",
-       "      <td>Rafael Souza</td>\n",
-       "      <td>(901) 234-5678</td>\n",
-       "      <td>1987-04-02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>10</td>\n",
-       "      <td>012.345.678-90</td>\n",
-       "      <td>Amanda Santos</td>\n",
-       "      <td>(012) 345-6789</td>\n",
-       "      <td>1999-10-22</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>11</td>\n",
-       "      <td>123.456.789-00</td>\n",
-       "      <td>Bruno Oliveira</td>\n",
-       "      <td>(123) 456-7890</td>\n",
-       "      <td>1984-03-15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>12</td>\n",
-       "      <td>234.567.890-01</td>\n",
-       "      <td>Juliana Lima</td>\n",
-       "      <td>(234) 567-8901</td>\n",
-       "      <td>1997-05-28</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>13</td>\n",
-       "      <td>345.678.901-02</td>\n",
-       "      <td>Gustavo Silva</td>\n",
-       "      <td>(345) 678-9012</td>\n",
-       "      <td>1989-07-09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>14</td>\n",
-       "      <td>456.789.012-03</td>\n",
-       "      <td>Larissa Pereira</td>\n",
-       "      <td>(456) 789-0123</td>\n",
-       "      <td>2002-09-14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>15</td>\n",
-       "      <td>567.890.123-04</td>\n",
-       "      <td>Fernando Rodrigues</td>\n",
-       "      <td>(567) 890-1234</td>\n",
-       "      <td>1983-12-07</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    id_usuario             cpf        nome_usuario telefone_usuario  \\\n",
-       "0            1  123.456.789-01          João Silva   (123) 456-7890   \n",
-       "1            2  234.567.890-12        Maria Santos   (234) 567-8901   \n",
-       "2            3  345.678.901-23      Pedro Oliveira   (345) 678-9012   \n",
-       "3            4  456.789.012-34         Ana Pereira   (456) 789-0123   \n",
-       "4            5  567.890.123-45    Carlos Rodrigues   (567) 890-1234   \n",
-       "5            6  678.901.234-56       Mariana Costa   (678) 901-2345   \n",
-       "6            7  789.012.345-67       Lucas Almeida   (789) 012-3456   \n",
-       "7            8  890.123.456-78    Isabela Ferreira   (890) 123-4567   \n",
-       "8            9  901.234.567-89        Rafael Souza   (901) 234-5678   \n",
-       "9           10  012.345.678-90       Amanda Santos   (012) 345-6789   \n",
-       "10          11  123.456.789-00      Bruno Oliveira   (123) 456-7890   \n",
-       "11          12  234.567.890-01        Juliana Lima   (234) 567-8901   \n",
-       "12          13  345.678.901-02       Gustavo Silva   (345) 678-9012   \n",
-       "13          14  456.789.012-03     Larissa Pereira   (456) 789-0123   \n",
-       "14          15  567.890.123-04  Fernando Rodrigues   (567) 890-1234   \n",
-       "\n",
-       "   dt_nascimento  \n",
-       "0     1990-01-15  \n",
-       "1     1985-07-20  \n",
-       "2     2000-03-10  \n",
-       "3     1998-09-05  \n",
-       "4     1982-12-30  \n",
-       "5     1995-06-25  \n",
-       "6     1992-11-18  \n",
-       "7     2001-08-12  \n",
-       "8     1987-04-02  \n",
-       "9     1999-10-22  \n",
-       "10    1984-03-15  \n",
-       "11    1997-05-28  \n",
-       "12    1989-07-09  \n",
-       "13    2002-09-14  \n",
-       "14    1983-12-07  "
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "sql = 'select * from usuario'\n",
+    "sql = 'show tables'\n",
     "\n",
-    "df_user = pd.read_sql(sql, connection)\n",
-    "df_user"
+    "df = pd.read_csv('../data/clientes_genericos.csv')\n"
    ]
   },
   {
@@ -258,7 +63,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "db = pd.read_sql(sql, connection)"
+   ]
   }
  ],
  "metadata": {
